# kalico-telemetry

./: .gitignore  Cargo.toml
.moon/: workspace.yml
docs/: hardware_setup.md
ffi_py/: Cargo.toml  pyproject.toml
ffi_py/src/: lib.rs
kalico_core/: Cargo.toml
kalico_core/src/: db.rs  lib.rs
pack_pios/: packer.json
pack_pios/scripts/: 03_install_rust_stack.sh
pico_bridge/: README.md  uart_bridge.py
pico_bridge/pico_uart_bridge/: Cargo.toml
pico_bridge/pico_uart_bridge/src/: main.rs
service/: Cargo.toml
service/src/: main.rs
