[project]
name = "ffi-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]


[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"
